2008-12-26  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* mappers.cc (Ftoascii), mappers.cc (Ftolower), mappers.cc
	(Ftoupper), DLD-FUNCTIONS/regexp.cc (Fregexp),
	DLD-FUNCTIONS/regexp.cc	(Fregexpi), DLD-FUNCTIONS/regexp.cc
	(Fregexprep): Add references.
	
2008-12-27  Jaroslav Hajek <highegg@gmail.com>

	* oct-obj.h, oct-obj.cc (octave_value_list::valid_scalar_indices): Remove.
	* ov-base-diag.cc, ov-base-diag.h, ov-base-scalar.cc, ov-base.h,
	ov-bool-mat.cc, ov-bool-mat.h, ov-bool-sparse.cc, ov-bool-sparse.h,
	ov-bool.cc, ov-bool.h, ov-ch-mat.cc, ov-ch-mat.h, ov-colon.h,
	ov-complex.cc, ov-complex.h, ov-cx-mat.cc, ov-cx-mat.h,
	ov-cx-sparse.cc, ov-cx-sparse.h, ov-float.cc, ov-float.h,
	ov-flt-complex.cc, ov-flt-complex.h, ov-flt-cx-mat.cc,
	ov-flt-cx-mat.h, ov-flt-re-mat.cc, ov-flt-re-mat.h, ov-intx.h,
	ov-perm.cc, ov-perm.h, ov-range.h, ov-re-mat.cc, ov-re-mat.h,
	ov-re-sparse.cc, ov-re-sparse.h, ov-scalar.cc, ov-scalar.h,
	ov-str-mat.cc, ov-str-mat.h, ov.h:
	Remove valid_as_scalar_index and valid_as_zero_index methods
	from octave_value, octave_base_value and all of its subclasses.

2008-12-26  Francesco Potortì  <pot@gnu.org>

	* data.cc (resize): Add cross reference to postpad.

2008-12-25  Jaroslav Hajek <highegg@gmail.com>

	* load-save.h (load_save_format_type, load_save_format_options): New
	enums.
	(load_save_format): Convert to a class.
	* load-save.cc (do_save(..., const octave_value&,...)): Use fmt.type
	in switch. Use options of LS_MAT_ASCII.
	(do_load, write_header): Use format.type in switch.
	* ls-mat-ascii.h (save_mat_ascii_data): Add tabs option.
	* ls-mat-ascii.cc (save_mat_ascii_data): Implement it.

2008-12-24  Ben Abbott  <bpabbott@mac.com>

	* DLD-FUNCTIONS/chol.cc: Compare results to 0 in tests.
	Delete spurious function calls in test block.

2008-12-24  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/eigs.cc: Use "testif HAVE_ARPACK" to skip tests if
	ARPACK is not available.

	* Makefile.in (DLD_XSRC): Add eigs.cc to the list.
